<resources>
    <string name="app_name">BloodyHelp</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="blood_type">Blood Type</string>
    <string name="city">City</string>
    <string name="key_shared_trans">Add widget</string>
    <string name="key_settings_notif">key_settings_notif</string>
    <string name="url_qoutes">https://talaikis.com/api/quotes/random/</string>
    <string name="url_root">http://melsheikh92-001-site1.itempurl.com/Services/CommonServices.svc/</string>
    <string name="blood_op">blood type O positive</string>
    <string name="blood_am">blood type A negative</string>
    <string name="blood_ap">blood type A positive</string>
    <string name="blood_bm">blood type B negative</string>
    <string name="blood_bp">blood type B positive</string>
    <string name="blood_abm">blood type AB negative</string>
    <string name="blood_abp">blood type AB positive</string>
    <string name="send_mail">Send email</string>
    <string name="make_call">Call</string>
    <string name="make_share">Share</string>
    <string name="bloody_help">Bloody Help</string>
    <string name="fav_add_remove">Add or remove from favorite list</string>
    <string name="New_Donor">New Donor</string>
    <string name="Display_name">Display name</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="Email">Email</string>
    <string name="Bood_type">Blood type</string>
    <string name="City">City</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="Settings">Settings</string>
    <string name="Add_to_favorite">Add to favorite</string>
    <string name="Mobile">Mobile</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="About">About me</string>
    <string name="random_quote" >Random Quote</string>
    <string name="inserted_successfully">Inserted Successfully</string>
    <string name="process_failed">Failed insert</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="empty">Cannot be empty</string>
    <string name="not_email">you input not seems to be an email</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="do_you_want_blood">Do you want Bloody help app makes a calls</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="no_internet">No Internet connection</string>
    <string name="err_data">Error while fetching data</string>
    <string name="loading">Loading</string>
    <string name="wait">Wait while loading...</string>
    <string name="donors">Donors</string>
    <string name="fav">Favorites</string>
    <string name="msg1">Hey,Here you can find a blood donor called</string>
    <string name="msg2">his/her email:</string>
    <string name="msg3">his/her mobile number is</string>

    <string-array name="bloodtypes">

        <item>All</item>
        <item>O positive</item>
        <item>A negative</item>
        <item>A positive</item>
        <item>B negative</item>
        <item>B positive</item>
        <item>AB negative</item>
        <item>AB positive</item>
    </string-array>
    <string-array name="bloodtypes2">
        <item>O positive</item>
        <item>A negative</item>
        <item>A positive</item>
        <item>B negative</item>
        <item>B positive</item>
        <item>AB negative</item>
        <item>AB positive</item>
    </string-array>
    <string-array name="arr_cities">
        <item>Alex</item>
        <item>Cairo</item>
        <item>Gizah</item>
    </string-array>


</resources>
