<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_blood"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="30dp"
                        android:src="@mipmap/abm"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Add_to_favorite"
                            android:textColor="@color/colorSilver" />

                        <CheckBox
                            android:id="@+id/chbox_fav"
                            style="@android:style/Widget.Holo.Light.CompoundButton.Star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/fav_add_remove"
                            android:layout_weight="1" />

                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/jhf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/Mobile"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imgbtn_call"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:background="@color/colorAccent"
                        android:contentDescription="@string/make_call"
                        android:padding="2dp"
                        android:src="@android:drawable/ic_menu_call" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/Emailjh"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/Email"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imgbtn_email"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center|end"
                        android:background="@color/colorAccent"
                        android:contentDescription="@string/send_mail"
                        android:padding="2dp"
                        android:src="@android:drawable/sym_action_email" />
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/make_share"
        android:elevation="12dp"
        android:padding="2dp"
        android:src="@android:drawable/ic_menu_share"
        app:fab_colorPressed="@color/colorAccentDarker"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorRipple="@color/colorAccent"
        tools:ignore="RtlHardcoded" />
</FrameLayout>